--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: java
+
+deploy:
+  provider: releases
+  api_key: "0145e6ffebc462ae5d14d9af5966f2f501f4538e"
+  file: "target/simple-1.0-SNAPSHOT.jar"
+  skip_cleanup: true
+  on:
+    tags: true
+
+
